--- a/index.html
+++ b/index.html
@@ -46,6 +46,8 @@
     
     zE("messenger:on", "open", function () {
       setTimeout(function(){ exec() }, 3000);
+      setTimeout(function(){ exec() }, 6000);
+      setTimeout(function(){ exec() }, 9000);
     })
     //zE("messenger:set", "conversationFields", [
     //  { id: "8312691629965", value: 100.50 }
